manifests/rss/netpol-rss-apps.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rss-server
  namespace: rss
spec:
  endpointSelector:
    matchLabels:
      core.spinkube.dev/app-name: rss-server
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: oauth2-proxy-rss
            io.kubernetes.pod.namespace: oauth2-proxy
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: shared-pg
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rss-ui
  namespace: rss
spec:
  endpointSelector:
    matchLabels:
      core.spinkube.dev/app-name: rss-ui
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: oauth2-proxy-rss
            io.kubernetes.pod.namespace: oauth2-proxy
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: shared-pg
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rss-fetcher
  namespace: rss
spec:
  endpointSelector:
    matchLabels:
      core.spinkube.dev/app-name: rss-fetcher
  ingress:
    - fromEndpoints:
        - matchLabels:
            rss-cron: "true"
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: shared-pg
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rss-cleaner
  namespace: rss
spec:
  endpointSelector:
    matchLabels:
      core.spinkube.dev/app-name: rss-cleaner
  ingress:
    - fromEndpoints:
        - matchLabels:
            rss-cron: "true"
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: shared-pg
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rss-cron
  namespace: rss
spec:
  endpointSelector:
    matchLabels:
      rss-cron: "true"
  egress:
    - toEndpoints:
        - matchLabels:
            core.spinkube.dev/app-name: rss-fetcher
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            core.spinkube.dev/app-name: rss-cleaner
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rss-migration
  namespace: rss
spec:
  endpointSelector:
    matchLabels:
      app: rss-migration
  egress:
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: shared-pg
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
