manifests/rss/netpol-rss-pg.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rss-pg
  namespace: rss
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: rss-pg
  ingress:
    - fromEndpoints:
        - matchLabels:
            cnpg.io/cluster: rss-pg
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudnative-pg
            io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: rss-pg
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
